implement retry reconnect socket

--- a/Config.ini
+++ b/Config.ini
@@ -26,3 +26,9 @@ min = 0.001| 0.01 |  1  |  1  |  0.1 |  1
 [TELEGRAM]
 token = 6136202579:AAFe3ZOnF7LgXHHX5r_QOBLXovsKOiHhbEo
 chat_id = @duongsau
+
+
+[CONNECT]
+client=3600
+socket=3600
+view=3600
